src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R5</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4</description>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
	 <fields>
        <fullName>Business_Partner_Segment__c</fullName>
        <label>Business Partner Segment</label>
        <picklist>
            <picklistValues>
                <fullName>00.0 - None Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01.0 - Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.0 - Forestry, Lumber and Wood Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0 - Oil and Gas Exploration and Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.0 - Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.1 - Potash, Soda and Borate Minerals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.1 - Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.2 - Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.3 - Malt Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.4 - Bottled and Canned Soft Drinks and Canned Waters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5 - Dairy Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.6 - Sugar and Confectionery Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.0 - Textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.1 - Leather and Leather Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.0 - Pulp and Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.0 - Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.1 - Gas Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.2 - Oil Refining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.1 - Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.2 - Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.3 - Other Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.4 - Personal and Household Care Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.5 - Alkalies and Chlorine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.6 - Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.1 - Plastic and Miscellaneous Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.2 - Manufacture of Carbon and Graphite Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.1 - Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.2 - Glass and Glass Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.3 - Stone, Clay and Concrete Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27.1 - Steel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_UsageD__c</fullName>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD - Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.8 - Residential Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9 - Commercial Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.1 - HVAC (Commercial Buildings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10 - Industrial Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10.1 - HVAC (Industrial Buildings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1 - Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1 - Automotive (Vehicles - OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1.1 - Automotive (Auto OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2 - Automotives (Parts - Tier1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2 - Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.12 - Chemical Intermediates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.13 - Consumer and Fine Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3 - Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4 - Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1 - Ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2 - Sugar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3 - Bakery &amp; Confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4 - Fruit &amp; Vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5 - Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6 - Meat , Poultry , Seafood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7 - Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8 - Other Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5 - Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5.10 - Paper and Paper Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6 - Textile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7 - Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1 - Aluminium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2 - Steel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
<fields>
        <fullName>ABB_Business_Partner_Segment_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Leading Business Partner Segment&quot;</description>
        <label>Business Partner Segment Level1</label>
        <picklist>
            <picklistValues>
                <fullName>A05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A83</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Business_Partner_Segment_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Business Partner Segment Level 1 to replace &quot;Leading Business Partner Segment&quot; 
Picklist containing the Business Partner Segment level2 Values</description>
        <label>Business Partner Segment Level2</label>
        <picklist>
            <controllingField>ABB_Business_Partner_Segment_Level1__c</controllingField>
            <picklistValues>
                <fullName>00.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27.1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Industry usage&quot;. 
Picklist containing the Industry Usage level1 Values</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level1</label>
        <picklist>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 1 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level2 Values</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level2</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level1__c</controllingField>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level3__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 2 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level3 Values</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level3</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level2__c</controllingField>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Channel class&quot; 
Picklist containing the values for differing ABB Channel Class.</description>
        <inlineHelpText>Channel classification of the Campaign.</inlineHelpText>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Channel Class Level1. 
Picklist containing the values for differing ABB Channel Class.</description>
        <inlineHelpText>Channel classification of the Campaign</inlineHelpText>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <label>Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Sales to End Customer / End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering, Procurement &amp; Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal ABB Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Equipment Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor - Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor - Technical Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator - Line Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator - Machine Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Wholesalers/Distributor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
     <fields>
        <fullName>Industry_Usage__c</fullName>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD - Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.8 - Residential Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9 - Commercial &amp; institutional Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10 - Industrial Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1 - Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1 - Automotive (Vehicles - OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2 - Automotives (Parts - Tier1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2 - Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3 - Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4 - Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5 - Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6 - Textile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7 - Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1 - Aluminium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2 - Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.3 - Other Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8 - Electronics and Semiconductors (3C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10 - Mining and Minerals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2 - Underground Mining including Hoisting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3 - Open Pit Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4 - Grinding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5 - Mineral Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11 - Cement and Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1 - Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2 - Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12 - Oil and Gas Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1 - Oil and Gas - Offshore Upstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2 - Oil and Gas - Onshore Upstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3 - Refining</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>   
</CustomObject>